// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`All props 1`] = `
<div>
  <input
    accept="*.zip"
    autocomplete="none"
    class="tr__form-input-file apptr__input _input-file"
    id="fileWidgetId"
    name="fileWidgetId"
    type="file"
  />
</div>
`;

exports[`Default props 1`] = `
<div>
  <input
    autocomplete="none"
    class="tr__form-input-file apptr__input _input-file"
    id="fileWidgetId"
    name="fileWidgetId"
    type="file"
  />
</div>
`;

exports[`Disabled 1`] = `
<div>
  <input
    accept="*.zip"
    autocomplete="none"
    class="tr__form-input-file apptr__input _input-file"
    disabled=""
    id="fileWidgetId"
    name="fileWidgetId"
    type="file"
  />
</div>
`;
